# parallel-tsp

./: .gitignore  README.md  analysis.ipynb  benchmark.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_benchmarks.py  test_mpi.py  todo
benchmark/: analysis.ipynb  hyperparameter_search.py
examples/: run_ga_example.py  run_ga_mpi_example.py  run_optimized_example.py
parallel_tsp/: distance_matrix.py  genetic_algorithm.py  mpi_strategy.py  optimisation_strategy.py  population.py  route.py  runner.py  stop_condition.py
results/: result_cores_1_cities_1000_pop_100_gen_200.json  result_cores_1_cities_1000_pop_100_gen_300.json  result_cores_1_cities_1000_pop_100_gen_400.json  result_cores_1_cities_1000_pop_100_gen_500.json  result_cores_1_cities_500_pop_100_gen_200.json  result_cores_1_cities_500_pop_100_gen_300.json  result_cores_1_cities_500_pop_100_gen_400.json  result_cores_1_cities_500_pop_100_gen_500.json  result_cores_1_cities_600_pop_100_gen_200.json  result_cores_1_cities_600_pop_100_gen_300.json  result_cores_1_cities_600_pop_100_gen_400.json  result_cores_1_cities_600_pop_100_gen_500.json  result_cores_1_cities_700_pop_100_gen_200.json  result_cores_1_cities_700_pop_100_gen_300.json  result_cores_1_cities_700_pop_100_gen_400.json  result_cores_1_cities_700_pop_100_gen_500.json  result_cores_1_cities_800_pop_100_gen_200.json  result_cores_1_cities_800_pop_100_gen_300.json  result_cores_1_cities_800_pop_100_gen_400.json  result_cores_1_cities_800_pop_100_gen_500.json  result_cores_1_cities_900_pop_100_gen_200.json  (+75 more)
tests/: test_distance_matrix.py  (+9 more)
(+1089 files in other folders)
