[tool.poetry]
name = "parallel-tsp"
version = "0.1.0"
description = ""
authors = ["dominik-air <domzurek@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
mpi4py = "^4.0.0"
networkx = "^3.3"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
isort = "^5.13.2"
black = {extras = ["jupyter"], version = "^24.8.0"}
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
